@@ -1704,7 +1704,7 @@ void AGE_Frame::OnOpen(wxCommandEvent&)
         Effects_C_ComboBox->Flash();
 
         modify_research_names.Clear();
-        if(EditorVersion == EV_UP)
+        if(GameVersion == EV_UP)
         {
             modify_research_names.Add("-1 - Set Time");
             modify_research_names.Add("-2 - Add Time");
@@ -1786,7 +1786,7 @@ void AGE_Frame::OnOpen(wxCommandEvent&)
         {
             effect_type_names.Add("7 - Spawn Unit");
         }
-        else if (EditorVersion == EV_UP)
+        else if (GameVersion == EV_UP)
         {
             effect_type_names.Add("7 - Enable/Disable/Force Multiuse Tech");
         }
@@ -1794,7 +1794,7 @@ void AGE_Frame::OnOpen(wxCommandEvent&)
         {
             effect_type_names.Add("7 - AoK UP and DE only");
         }
-        if(EditorVersion == EV_UP)
+        if(GameVersion == EV_UP)
         {
             effect_type_names.Add("8 - Modify Tech");
             effect_type_names.Add("9 - Set Player Civ Name");
@@ -1804,7 +1804,7 @@ void AGE_Frame::OnOpen(wxCommandEvent&)
             effect_type_names.Add("8 - UP 1.5 only");
             effect_type_names.Add("9 - UP 1.5 only");
         }
-        if(GenieVersion >= genie::GV_Cysion && GenieVersion <= genie::GV_LatestDE2 || EditorVersion == EV_UP)
+        if(GenieVersion >= genie::GV_Cysion && GenieVersion <= genie::GV_LatestDE2 || GameVersion == EV_UP)
         {
             effect_type_names.Add("10 - Team Attribute Modifier (Set)");
             effect_type_names.Add("11 - Team Resource Modifier (Set/+/-)");
@@ -1819,7 +1819,7 @@ void AGE_Frame::OnOpen(wxCommandEvent&)
             for(size_t loop = 10; loop < 17; ++loop)
             effect_type_names.Add(lexical_cast<string>(loop) + " - AoK UP, HD and DE only");
         }
-        if(EditorVersion == EV_UP)
+        if(GameVersion == EV_UP)
         {
             effect_type_names.Add("17 - Team Enable/Disable/Force Multiuse Tech");
             effect_type_names.Add("18 - Team Modify Tech");
